Run Error Prone without forking compiler
This allows it to benefit from Maven Daemon.